--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,14 @@
-body{
-	background: white;
-	width: 100%;
-	height: 100%;
-}
 .Logo{
 	width: 100%;
-	height: 85px;
+	height: 85%;
 	font-family: myriad-pro, sans-serif;
 	font-style: normal;
 	font-weight: 400px;
 	padding-left:25%;
-	height: 90px;
+	padding-bottom: 1%;
 	background:#5b6169; 
 }
-.Logo h3{
+.Logo h4{
 	background: linear-gradient(white 70% , grey);
 	font-size: 18px;
 	-webkit-background-clip: text;
@@ -27,12 +22,9 @@ body{
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
-.container-fluid{
-	padding: 0px;
-}
-.carousel-inner img{
-	height: 400px;
+.carousel-item img{
 	width: 100%;
+	height: 345px;
 }
 
 .carousel-indicators{
@@ -47,36 +39,41 @@ body{
 	background:#3674ba;
 }
 .carousel-caption{
-	padding-left: 36%;
-	padding-bottom: 7%;
+	padding-left: 35%;
+	height: 35vh;
 	text-align: left;
 }
 .carousel-caption h1{
-	width: 550px
+	width: 55vw;
+	font-size: 4vh;
 }
 .carousel-caption p{
 	color: #335565;
-	width: 400px;
+	width: 25vw;
+	font-size: 2vh;
 }
 .carousel-caption button{
 	background: #74abda;
 	color: white;
-	width: 170px;
-	height: 40px;
+	width: 23%;
+	height: 5.5vh;
 	border: 0px;
+	font-size: 2vh;
 }
-.container{
-	padding: 0px;
+
+.Services{
+	text-align: center;
 }
 .title {
 	padding-top: 1.5%;
+	margin-bottom: 1.5%;
 	overflow: hidden;
 	text-align: center;
 }
 .title span {
 	display: inline-block;
 	vertical-align: middle;
-	font-size: 45px;
+	font-size: 8vh;
 	font-family: 'Open Sans', sans-serif;
 }
 .title:before,
@@ -84,7 +81,7 @@ body{
 	content: "";
 	display: inline-block;
 	vertical-align: middle;
-	width: 25%;
+	width: 15%;
 	height: 2px;
 	background-color: grey;
 	position: relative;
@@ -97,105 +94,113 @@ body{
 	margin-right: -100%;
 	right: -14px;
 }
-.Windows,
+.Apple,
 .Android,
-.Apple{
+.Windows{
 	text-align: center;
+	align-items: center;
 	display: inline-block;
-	margin-left: 3%;
+
 }
-.Windows h2,
+.Apple h2,
 .Android h2,
-.Apple h2{
-	font-family: 'Open Sans', sans-serif;
+.Windows h2{
 	color:#3674ba;
-	margin-bottom: 1%;
+	font-family: 'Open Sans', sans-serif;
 }
-.Windows button,
+.Apple img,
+.Android img,
+.Windows img{
+	width: 30%;
+	height: 30%;
+	padding-bottom: 2%
+}
+.Apple p,
+.Android p,
+.Windows p{
+	text-align: center;
+	width: 300px;
+	font-size: 2vh;
+}
+.Apple button,
 .Android button,
-.Apple button{
-	width: 125px;
-	height: 30px;
+.Windows button{
+	width: 35%;
+	height: 4vh;
 	color:white;
 	background: #3674ba;
 	border: 0px;
-	margin-bottom: 3%;
-}
-.Windows img,
-.Android img,
-.Apple img{
-	width: 90px;
-	height: 90px;
-	margin-bottom: 2%;
-}
-.Windows p,
-.Android p,
-.Apple p{
-
-	text-align: center;
-	width: 300px;
+	margin-bottom: 15%;
 }
 .About{
-	margin-top: 2%;
-	padding-top: -2%;
-	width: 100%;
-	height: 620px;
-	background:#d1d1d1;
-	text-align: center;
+	background: #D1D1D1;
 }
-.About span{
-	color:#5b6169;
-}
-.Text{
-	padding-left:30%;
-}
-.Text h2{
-
+.About h4{
 	text-align: left;
 	font-size: 36px;
+	font-family: myriad-pro, sans-serif;
+	font-style: normal;
 	color:#7c7c7c;
-
 }
-.Text p{	
+.About p{
 	text-align: left;
 	font-family: myriad-pro, sans-serif;
 	font-style: normal;
-	width: 400px;
+	width: 100%;
 	font-size: 14px;
-	margin:0px;
 }
-.Map{
-display: block;
-}
-.Map img{
-	width: 450px;
-	height: 155px;
-}
-
-.progress-bar{
-	text-align: left;
-	padding-left: 1%;
+.About h5{
 	font-family: 'Open Sans', sans-serif;
 	font-style: normal;
-	font-size: 14px;
-	height: 30px;
-
+	font-size: 5vh;
+	color:#3674BA;
+	margin-top: 11%;
+}
+.Map img{
+	width:100%;
+	height: 50%;
 }
 .progress{
-	padding-bottom: 3.2%;
-	width: 460px;
-	margin-left:30%;
 	margin-bottom: 10px;
 	height:30px;
 	text-transform: uppercase;
 	font-size: 14px;
 	border-radius: 0rem;
-	float: left;
+	background:#828181;
+}
+.progress-bar{
+	width: 87%;
+	text-align: left;
+	padding-left: 2%;
+	background: #3674BA;
+
+}
+.progress-bar-1{
+	width: 95%;
+	text-align: left;
+	padding-left: 2%;
+	background: #3674BA;
+	color: white;
+
+}
+.progress-bar-2{
+	width: 80%;
+	text-align: left;
+	padding-left: 2%;	
+	background: #3674BA;
+	color: white;
+}
+.progress-bar-3{
+	width: 95%;
+	text-align: left;
+	padding-left: 2%;
+	background: #3674BA;
+	color: white;
+
 }
 .butt{
 	position: relative;
-	margin-left: 63%;
-	height: 40px;
+	margin-left: 80%;
 	border-radius:0px;
 	background-color: #3674ba;
 	border-color: #3674ba;
@@ -203,30 +208,20 @@ display: block;
 	width:20%;
 	padding: .375rem .75rem;
 	position:relative;
-	top:-51px;
-}
-.footer{
-	font-family: myriad-pro, sans-serif;
-	font-style: normal;
-	font-size:12px;
-	width: 100%;
-	height: 50px;
-	margin-top: 2%;
-	text-align: center;
-}
-h4{
-	color:#3674ba;
-	font-family: 'Open Sans', sans-serif;
-	font-style: normal;
-	margin-left:-28%;	
+	top:-47px;
+	border:0px;
 }
 input{
-	width:461px;
-	height: 28px;
+	width:100%;
 	margin: 5px 0px;
 }
 textarea{
-	width:460px;
-	height:110px;
+	width:100%;
+	height:118px;
 	resize: none;
+}
+footer{
+	padding-top: 1.5%;
+	text-align: center;
+	font-size:1.75vh;
 }
