--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body{
+	width: 100%;
+	height: 100%;
+}
 .Logo{
 	width: 100%;
 	height: 85%;
@@ -73,7 +77,7 @@
 .title span {
 	display: inline-block;
 	vertical-align: middle;
-	font-size: 8vh;
+	font-size: 7.5vh;
 	font-family: 'Open Sans', sans-serif;
 }
 .title:before,
