--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-body{
-	width: 100%;
-	height: 100%;
-}
 .Logo{
 	width: 100%;
 	height: 85%;
@@ -28,7 +24,7 @@ body{
 }
 .carousel-item img{
 	width: 100%;
-	height: 345px;
+	height: 40%;
 }
 
 .carousel-indicators{
@@ -44,23 +40,22 @@ body{
 }
 .carousel-caption{
 	padding-left: 35%;
-	height: 35vh;
+	height: 68%;
 	text-align: left;
 }
 .carousel-caption h1{
-	width: 55vw;
-	font-size: 4vh;
+font-family: 'Open Sans', sans-serif;
 }
 .carousel-caption p{
-	color: #335565;
-	width: 25vw;
-	font-size: 2vh;
+	color: #4e4e4e;
+	font-family: 'Open Sans', sans-serif;
+	width: 75%;
 }
 .carousel-caption button{
 	background: #74abda;
 	color: white;
-	width: 23%;
-	height: 5.5vh;
+	width: 30%;
+	height: 15%;
 	border: 0px;
 	font-size: 2vh;
 }
@@ -77,7 +72,7 @@ body{
 .title span {
 	display: inline-block;
 	vertical-align: middle;
-	font-size: 7.5vh;
+	font-size: 6vh;
 	font-family: 'Open Sans', sans-serif;
 }
 .title:before,
@@ -228,4 +223,34 @@ footer{
 	padding-top: 1.5%;
 	text-align: center;
 	font-size:1.75vh;
+}
+
+@media all and (max-width: 500px){
+.carousel-caption h1{
+	font-size: 10px;
+}
+.carousel-caption p{
+	font-size: 5px;
+	padding-bottom: 15%;
+}
+.carousel-indicators{
+	padding-left: 60%;
+} 
+.carousel-indicators li{
+	border-radius: 50%;
+	width: 5px;
+	height: 5px;
+}
+}
+@media all and (min-width: 500px){
+.carousel-caption h1{
+	font-size: 20px;
+}
+.carousel-caption p{
+	font-size: 15px;
+	padding-bottom: 15%;
+}
+.carousel-indicators{
+	padding-left: 60%;
+} 
 }
