--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
 	text-align: left;
 }
 .carousel-caption h1{
-font-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
 .carousel-caption p{
 	color: #4e4e4e;
@@ -225,32 +225,70 @@ footer{
 	font-size:1.75vh;
 }
 
-@media all and (max-width: 500px){
-.carousel-caption h1{
-	font-size: 10px;
+@media all and (max-width: 600px){
+	.carousel-caption{
+		padding-left: 35%;
+		height: 85%;
+		text-align: left;
+		padding-right: 10px;
+	}
+	.carousel-caption h1{
+		font-size: 10px;
+		margin-bottom: 3px;
+	}
+	.carousel-caption p{
+		font-size: 5px;
+		padding-bottom: 15%;
+		width: 75%;
+		margin:0px; 
+		padding:0px;
+	}
+	.carousel-indicators{
+		padding-left: 60%;
+	} 
+	.carousel-indicators li{
+		border-radius: 50%;
+		width: 5px;
+		height: 5px;
+	}
+	.carousel-caption button{
+		background: #74abda;
+		color: white;
+		width: 30px;
+		height: 10px;
+		border: 0px;
+		font-size: 5px;
+		padding: 0px;
+	}
+
 }
-.carousel-caption p{
-	font-size: 5px;
-	padding-bottom: 15%;
-}
-.carousel-indicators{
-	padding-left: 60%;
-} 
-.carousel-indicators li{
-	border-radius: 50%;
-	width: 5px;
-	height: 5px;
-}
-}
-@media all and (min-width: 500px){
-.carousel-caption h1{
-	font-size: 20px;
-}
-.carousel-caption p{
-	font-size: 15px;
-	padding-bottom: 15%;
-}
-.carousel-indicators{
-	padding-left: 60%;
-} 
+
+@media all and (min-width: 600px){
+	.carousel-caption{
+		padding-left: 35%;
+		height: 85%;
+		text-align: left;
+		padding-right: 10px;
+	}
+	.carousel-caption h1{
+		font-size: 4vw;
+	}
+	.carousel-caption p{
+		font-size: 1.3vw;
+		padding-bottom: 15%;
+		margin:0px;
+		padding-bottom: 10px;
+	}
+	.carousel-indicators{
+		padding-left: 60%;
+	} 
+	.carousel-caption button{
+		background: #74abda;
+		color: white;
+		width: 30%;
+		height: 20%;
+		border: 0px;
+		font-size: 1.5vw;
+	}
+
 }
